--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -9,3 +9,19 @@
   align-items: center;
   justify-content: center;
 }
+
+.profile-buttons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.modal-close {
+  font-size: 3rem;
+  font-style: bold;
+  cursor: pointer;
+}
+
+.modal-close:hover {
+  color: gray;
+  cursor: pointer;
+}
